--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
+2004-09-17 (version 0.8.3)
+    * cddb: fix socket flushing
+    * namingmuse.spec: added RPM spec file
+    
 2004-08-09
-    * terminal: clean up output formattin
+    * terminal: clean up output formatting
     * namingmuse: new option -A, place album in artist/album
     * albuminfo: added albuminfo class and freedbalbuminfo subclass
     * albumtag: improved namebinder heuristics using play length
