--- a/TODO
+++ b/TODO
@@ -9,3 +9,4 @@ TODO
 * improve outer namebinder approximation algorithms
 * support "manual" tags (=namingmuse shouldn't touch it)
 * support other sources for metainformation. musicbrainz is a highly relevant source.
+* autoselect namebinder_trackorder when all tracks are numbered in sequence
