--- a/TODO
+++ b/TODO
@@ -10,3 +10,4 @@ TODO
 * support "manual" tags (=namingmuse shouldn't touch it)
 * support other sources for metainformation. musicbrainz is a highly relevant source.
 * autoselect namebinder_trackorder when all tracks are numbered in sequence
+* clean up discmatch module and strip it for cddb knowledge
