--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ TODO
 * do smart namefixing (knowing artist/title parts) and allow combining
   namefix option with freedb get
 * see if improvements can be made to discid generator
-* searchfreedb: default to using albumdir as search words
+* searchfreedb: default to using tag info, then albumdir as search words
 * improve outer namebinder approximation algorithms
 * support "manual" tags (=namingmuse shouldn't touch it)
 * support other sources for metainformation. musicbrainz is a highly relevant source.
