--- a/TODO
+++ b/TODO
@@ -15,3 +15,7 @@ TODO
   they will match only a lot of incorrect albums
 * trackorder means alphabetical order, make new function to order by track nr
 * use ENV instead of a flag in each file defining if you want DEBUG or not
+* more ~/.namingmuse/ module hooks: preprocessing, postprocessing etc..
+* manually enter freedb disc id
+* manually specify sort order of tracks for freedb lookup
+* manually specify namebinding
