minor doc updates. bump version to 1.0.0

--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,11 @@
-2008-09-07 (version 0.9.3)
+2008-09-07 (version 1.0.0)
 	* Add musicbrainz support with puid.
 	* Fix mpc and flac support.
 	* Add ncurses interface for manual namebinding.
 	* Add rollback support for incomplete renames.
 	* Add ignore option for ignoring directories in recursive mode.
 	* Documentation updates.
+	* Added test suite.
 
 2008-09-07 (version 0.9.2)
 	* Fix html parser for updated freedb web interface.
